--- a/index.html
+++ b/index.html
@@ -4,10 +4,100 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>New Year New Me</title>
     <link rel="stylesheet" href="style.css">
+
+    <!-- font Icons Added -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" />
 </head>
 <body>
-    
+    <header>
+        <div class="text-section">
+      <h1 class="text-header">All Thinks Are Possible If You believe</h1>
+      <p class="lorem-header">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit recusandae ipsum assumenda, debitis tenetur eligendi asperiores enim sapiente illo quam rem nam nemo accusantium voluptatibus voluptatum distinctio, error neque quibusdam?</p>
+      <button class="btn-header">Contact us</button>
+        </div>
+    </header>
+    <main>
+        <section class="section1">
+            <div class="my-failure">
+                <div class="img-section">
+                   <img src="images/person.png" alt="">
+                </div>
+                <div class="text-section2">
+                    <h2 class="text-failure">My failures of previous year</h2>
+                    <p class="p-failure">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo provident, hic maiores itaque sequi, dolorum vero, atque aut asperiores natus blanditiis voluptas in eius maxime.</p>
+
+                    <h5><i class="fa-solid fa-check"></i> Lorem ipsum dolor sit amet consectetur adipisicing.</h5>
+                    <h5><i class="fa-solid fa-check"></i> Lorem ipsum dolor sit amet consectetur .</h5>
+                    <h5><i class="fa-solid fa-check"></i> Lorem ipsum dolor sit amet consectetur adipisicing adipisicing .</h5>
+                    <h5><i class="fa-solid fa-check"></i> Lorem ipsum dolor sit amet consectetur adipisicing.</h5>
+                    <h5><i class="fa-solid fa-check"></i> Lorem ipsum  adipisicing.</h5>
+                    <h5><i class="fa-solid fa-check"></i> Lorem ipsum dolor sit amet dipisicing.</h5>
+                    <h5><i class="fa-solid fa-check"></i> Lorem ipsum dolor adipisicing.</h5>
+                    <h5><i class="fa-solid fa-check"></i> Lorem ipsum dolor sit amet consectetur adipisicing.</h5>
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="my-plans">
+                <h1 class="plans-text">My Plans</h1>
+                <div class="icons">
+                    <div class="web-development">
+                       <img src="images/icons/web.png" alt="">
+                       <h4>Web Development</h4>
+                       <p>I want to start</p>
+                    </div>
+
+                    <div class="web-development">
+                        <img src="images/icons/js.png" alt="">
+                        <h4>Javascript</h4>
+                        <p>I want to start</p>
+                     </div>
+
+                     <div class="web-development">
+                        <img src="images/icons/smoke.png" alt="">
+                        <h4>Smoking</h4>
+                        <p>I want to start</p>
+                     </div>
+
+                     <div class="web-development">
+                        <img src="images/icons/ecom.png" alt="">
+                        <h4>Ecommerce</h4>
+                        <p>I want to start</p>
+                     </div>
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="gradiant">
+                <h2>Awlays keep a positive mindest</h2>
+                <button class="btn-call">Call Now</button>
+            </div>
+        </section>
+    </main>
+    <footer>
+        <div class="future">
+          <div class="text-future">
+            <h1>Future</h1>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quos sunt blanditiis harum placeat velit, fugit modi eaque dicta iusto iure.</p>
+               <br>
+           <h3> Email : infor@gmail.com</h3>
+           <br>
+           <h3>Phone : 01500 00 00 00</h3>
+           <div class="f-icons">
+            <img src="images/icons/fb.png" alt="">
+            <img src="images/icons/twitter.png" alt="">
+            <img src="images/icons/youtube.png" alt="">
+           </div>
+          </div>
+          <div class="subscribe">
+            <h4>Subscribe</h4>
+            <input type="text" name="" id="" placeholder="Enter your gmail">
+            <button>Subscribe</button>
+          </div>
+        </div>
+    </footer>
+
 </body>
 </html>
